cabal-version: 2.4

name: final-project
version: 1.0.0.0
synopsis: Final Project: CS 457/557 Functional Programming, Winter 2022
homepage: https://canvas.pdx.edu/courses/14714
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Wilson
maintainer: anwils2@pdx.edu
copyright: (c) 2022 Andrew Wilson
category: Education

library
  exposed-modules: Escape
  default-extensions: GADTSyntax
  build-depends: base >= 4.11 && <5
  hs-source-dirs: src
  default-language: Haskell2010

  ghc-options:
    -fwarn-incomplete-patterns
    -fwarn-incomplete-uni-patterns
    -Werror
    -O2

executable final-project
    main-is: Main.hs
    default-extensions: GADTSyntax
    build-depends: base >= 4.11 && <5, final-project
    hs-source-dirs: app
    default-language: Haskell2010

    ghc-options:
      -fwarn-incomplete-patterns
      -fwarn-incomplete-uni-patterns
      -Werror
      -O2

